# template_kedro_streamlit

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pylint.rc  pyproject.toml  setup.cfg
OSRM/: Makefile  README.md  docker-compose-osrm.yaml
conf/base/: catalog.yml  catalog_apis.yml  catalog_cashed.yml  catalog_parameters.yml  logging.yml  parameters.yml  parameters_test.yml
conf/local/: catalog.yml
docs/experiment_notes/: 20230117_adil_kedro_catelog_st_session_data_link.md.md  20230123_view_transformation.md
docs/source/: conf.py
notebooks/: scratchboard.ipynb
src/: requirements.txt  setup.py
src/dashboards/: README.md  config.py  main.py
src/dashboards/decorators/: __init__.py  cached_table_required.py  kedro_context_required.py
src/dashboards/kedro_wrapper/: catalog.py  context.py  create_credentials.py  params.py  pipelines.py
src/dashboards/pages/: 01_view.py  02_edit.py  03_aggregation.py  iris_aggregation.py
src/dashboards/shared/: create_credentials.py  io.py  models.py
src/dashboards/tests/: test_kedro_wrapper.py  test_kedro_wrapper_context.py  test_kedro_wrapper_pipeline.py
src/dashboards/utils/: check_password.py  filter_dataframe.py
src/pipelines/: __main__.py  pipeline_registry.py
src/pipelines/extras/datasets/: gmaps_geocoder.py  osrm_ports.py  pyrosm_instance.py
src/pipelines/iris/: nodes.py  pipeline.py
src/pipelines/iris_agg/: pipeline.py
src/pipelines/iris_agg_v2/: nodes.py  pipeline.py
src/pipelines/test/: __init__.py  nodes.py  pipeline.py
src/pipelines/utils/: partitioned_data.py  primary_data_prep.py
src/pipelines/utils/OSRM/: get_osrm_tables.py  get_table.py  osrm.py  osrm_get_routes.py  osrm_tsp.py
src/shared/: README.md  runner.py
