[tool.kedro]
package_name = "pipelines"
project_name = "Iris"
project_version = "0.18.4"

[tool.isort]
profile = "black"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "template-kedro-streamlit"
version = "0.1.0"
description = ""
authors = ["ARashitov <adil.rashitov.98@gmail.com>"]
readme = "README.md"
packages = [{include = "template_kedro_streamlit"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
kedro = "^0.18.4"
streamlit = "^1.16.0"
pre-commit = "^2.21.0"
awswrangler = "^2.18.0"
autopep8 = "^2.0.1"
jupyter = "^1.0.0"
flake8 = "^6.0.0"
pylint = "^2.15.9"
flake8-bugbear = "^22.12.6"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-functions = "^0.0.7"
flake8-import-order = "^0.18.2"
jupyter-contrib-core = "^0.4.2"
jupyterthemes = "^0.20.0"
jupyter-contrib-nbextensions = "^0.7.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
