[tool.kedro]
package_name = "pipelines"
project_name = "template_kedro_streamlit"
project_version = "0.18.4"

[tool.isort]
profile = "black"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "template_kedro_streamlit"
version = "0.1.0"
description = ""
authors = ["Waste Labs <info@wastelabs.co>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
kedro = "^0.18.5"
kedro-viz = "^5.3.0"
streamlit = "^1.19.0"
awswrangler = "^2.18.0"
keplergl = "^0.3.2"
black = "^22.12.0"
scikit-learn = "^1.2.0"
geopy = "^2.3.0"
streamlit-aggrid = "^0.3.3"
pydantic = "^1.10.5"
fsspec = "2022.11.0"
s3fs = "2022.11.0"
skimpy = {git = "https://github.com/aeturrell/skimpy.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
